# Entropy-Benchmarking

./: .gitignore  README.md  run.bat  run.sh  setup.bat  setup.sh
Benchmarking/: CMakeLists.txt
Benchmarking/Data/CS_metrics/: Q3_D10.json  Q5_D15.json
Benchmarking/Data/DensityMatrices_metrics/: Q3_D10.json  Q5_D15.json
Benchmarking/Data/plotting/: plotting.py
Benchmarking/Data/plotting_script/: plotting.ipynb  plotting.py
Benchmarking/Data_test/AnalyticalModel_metrics/: Q10_purity_model_globalDP.json  Q10_purity_model_globalDP_localDP.json  Q10_purity_model_p1_p2.json  Q10_purity_model_p1_p2_wi.json  Q11_purity_model_globalDP.json  Q11_purity_model_globalDP_localDP.json  Q11_purity_model_p1_p2.json  Q11_purity_model_p1_p2_wi.json  Q12_purity_model_globalDP.json  Q12_purity_model_globalDP_localDP.json  Q12_purity_model_p1_p2.json  Q12_purity_model_p1_p2_wi.json  Q13_purity_model_globalDP.json  Q13_purity_model_globalDP_localDP.json  Q13_purity_model_p1_p2.json  Q13_purity_model_p1_p2_wi.json  Q14_purity_model_globalDP.json  Q14_purity_model_globalDP_localDP.json  Q14_purity_model_p1_p2.json  Q14_purity_model_p1_p2_wi.json  Q15_purity_model_globalDP.json  Q15_purity_model_globalDP_localDP.json  Q15_purity_model_p1_p2.json  Q15_purity_model_p1_p2_wi.json  Q16_purity_model_globalDP.json  Q16_purity_model_globalDP_localDP.json  Q16_purity_model_p1_p2.json  Q16_purity_model_p1_p2_wi.json  Q17_purity_model_p1_p2_wi.json  Q2_purity_model_globalDP.json  Q2_purity_model_globalDP_localDP.json  Q2_purity_model_p1_p2.json  Q2_purity_model_p1_p2_wi.json  Q3_purity_model_globalDP.json  Q3_purity_model_globalDP_CS.json  Q3_purity_model_globalDP_localDP.json  Q3_purity_model_p1_p2.json  Q3_purity_model_p1_p2_wi.json  Q4_purity_model_globalDP.json  Q4_purity_model_globalDP_localDP.json  (+22 more)
Benchmarking/Data_test/ClassicalShadows_metrics/: Q2.json  Q3.json  Q3_m320_k1000_g5_s3.json  Q5_D0_D7.json  Q5_D0_D7_m3072_k100_g3_s3.json
Benchmarking/Data_test/ClassicalShadows_metrics/rd_experiments/: Q3_m320_k1000_g5_s3.json  Q3_m320_k1000_g5_s3_gen_837_0.json  Q3_m320_k1000_g5_s3_gen_837_Protocol.json  Q3_m320_k1000_g5_s3_gen_genrand53.json  Q3_m320_k1000_g5_s3_rd_gen_seed.json
Benchmarking/Data_test/ClassicalShadows_metrics/results_debugging/: Q3_1000shots.json  Q3_1000shots_changedprobcalc.json  Q3_100shots.json  Q3_bigendian.json  Q3_correct_qiskit_order.json  Q3_flipped_meas_bit.json  Q3_m30_k100_quest_order_sampling1.json  Q3_m30_k100_quest_order_sampling2.json  Q3_m320_k1000_quest_order_sampling2.json  Q3_randommth.json  Q3_reverse_bit_key.json  Q3_wrong.json
Benchmarking/Data_test/DensityMatrices_metrics/: Q10.json  Q11.json  Q12.json  Q13.json  Q14.json  Q15.json  Q16.json  Q17.json  Q2.json  Q3.json  Q4.json  Q5.json  Q6.json  Q7.json  Q8.json  Q9.json
Benchmarking/Data_test/DensityMatrices_metrics/MatrixComparison/: Q3_D0_D5_FidelityComparison  Q3_D0_D5_FidelityComparison_fixed  Q3_D0_D5_metrics_qiskit.json
Benchmarking/Data_test/DensityMatrices_metrics/higher damping x2 than local DP/: Q_AD10.json  Q_AD2.json  Q_AD3.json  Q_AD4.json  Q_AD5.json  Q_AD6.json  (+3 more)
Benchmarking/Data_test/Swap_metrics/: Q2.json  Q3.json  Q3_m3000_g3_s3.json  Q5.json  Q5_m307200_g3_s3.json
Benchmarking/include/: Backend.h  Circuit.h  ClassicalShadows.h  DensityMatrix.h  Layer.h  Protocol.h  Utils.h
Benchmarking/include/AnalyticalModel/: PurityModel.h
Benchmarking/include/Backends/: Simulator.h
Benchmarking/include/Protocols/: ClassicalShadows.h  DensityMatrix.h  Swap.h
Benchmarking/src/: Backend.cc  ClassicalShadows.cc  DensityMatrix.cc  Layer.cc  Protocol.cc  Utils.cc  main.cc
Benchmarking/src/AnalyticalModel/: PurityModel.cc
Benchmarking/src/Backends/: Simulator.cc
Benchmarking/src/Protocols/: ClassicalShadows.cc  DensityMatrix.cc  Swap.cc
(+10 files in other folders)
